<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:weightSum="1"
    tools:context="com.example.abhinav.projecthp.NewStudentActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.30">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/name"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@android:color/transparent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course"
        android:hint="@string/course"
        android:padding="10dp"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@android:color/transparent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:padding="10dp"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@android:color/transparent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/semester"
        android:hint="@string/semester"
        android:padding="10dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@android:color/transparent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plan"
        android:hint="@string/plan"
        android:padding="10dp"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@android:color/transparent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/doj"
        android:hint="@string/doj"
        android:padding="10dp"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/add" />
</LinearLayout>