<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context="com.example.abhinav.projecthp.LandingPageActivity"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.36">
        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/student_enroll_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/trainer_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trainer"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/course_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/enrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enrollment"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp" />
</LinearLayout>