<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center"
    tools:context="com.example.abhinav.projecthp.LoginScreenActivity"
    android:weightSum="1" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="8dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:textSize="16sp"
            android:gravity="start" />

        <TextView
            android:id="@+id/tv_forgotpassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/white"
            android:padding="5dp"
            android:gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/exit" />
</LinearLayout>