<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:weightSum="1"
    tools:context="com.example.abhinav.projecthp.StudentDetailsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.35">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:text="Course:"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:text="Phone:"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="Semester:"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/semester"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="Plan:"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plan"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:layout_weight="0.6">

        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="Date of Joining:"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/doj"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="80dp"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="80dp"/>
    </RelativeLayout>
</LinearLayout>